[package]
name = "kvs"
version = "0.1.0"
authors = ["caibirdme <englanq@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.31.0", features = ["yaml"]}
serde = {version="~1.0", features=["derive"]}
serde_json = "1.0.51"
failure = "0.1.7"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
walkdir = "2.2.7"
tempfile = "3.1.0"
